--- a/MyUI/MyUI.csproj
+++ b/MyUI/MyUI.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="mTabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="mTabControl.Designer.cs">
+      <DependentUpon>mTabControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
