--- a/Tools/packages.config
+++ b/Tools/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="QRCoder" version="1.7.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="2.0.2" targetFramework="net472" />
 </packages>
